--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Interests</a>
+              <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">Research</a>
@@ -61,15 +61,15 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in">Hi there!</div>
+          <div class="intro-lead-in">Incoming PhD student @ MIT DMSE </div>
           <div class="intro-heading text-uppercase"></div>
           <a class="btn btn-primary btn-xl text-uppercase btn-info" href="media/O'Leary_CV.pdf">CV</a>
         </div>
       </div>
     </header>
 
-    <!-- Services -->
-    <section id="services">
+    <!-- Interests -->
+    <section id="interests">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -81,26 +81,43 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">In Silico</h4>
-            <p class="text-muted">Computer simulations can shed light on the physical processes underlying interesting material properties. Using knowledge gained by computation and theory, we can design new materials at the nanoscale that will give the properties we want. </p>
-          </div>
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">PoC Devices</h4>
-            <p class="text-muted">Using modern synthesis and processing techniques, we bring our material designs into the real world and make proof-of-concept devices. </p>
+            <h4 class="interest-heading">Theory + Experiment</h4>
+            <p class="text-muted">By combining computation and experiment, we can deeply understand the physics responsible for desireable material properties. </p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-lightbulb-o fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Sustainability</h4>
-            <p class="text-muted">With a proof-of-concept device, we can interface with industry partners to scale up the technology in a sustainable way.</p>
+            <h4 class="interest-heading">Rational Design</h4>
+            <p class="text-muted">With physical understanding, we can improve existing materials or invent radically new ones.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-microchip fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="interest-heading">PoC Devices</h4>
+            <p class="text-muted">Using modern synthesis and processing techniques, we can translate designs into real materials and build proof-of-concept devices. </p>
+          </div>
+          <div class="col-md-6">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-refresh fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="interest-heading">Sustainable Tech</h4>
+            <p class="text-muted">Better materials are needed to improve sustainable energy technologies, such as photovoltaics and hydrogen fuel cells. </p>
+          </div>
+          <div class="col-md-6">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="interest-heading">Beyond Critical Materials</h4>
+            <p class="text-muted">We should work towards developing materials whose synthetic ingredients can be ethically and sustainably sourced.</p>
           </div>
         </div>
       </div>
@@ -127,7 +144,8 @@
             </a>
             <div class="portfolio-caption">
               <h4>AuNP PLI Synthesis</h4>
-              <p class="text-muted">ChE128, Caltech</p>
+              <p class="text-muted">Caltech</p>
+              <p class="text-muted">2018</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -141,7 +159,8 @@
             </a>
             <div class="portfolio-caption">
               <h4>Boundary Region Embedding</h4>
-              <p class="text-muted">Goddard Group, Caltech</p>
+              <p class="text-muted">Caltech</p>
+              <p class="text-muted">2017</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -154,8 +173,9 @@
               <img class="img-fluid" src="media/research/VPO/thumbnail.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Vanadyl Pyrophosphate Dual-Phase Mechanism</h4>
-              <p class="text-muted">Goddard Group, Caltech</p>
+              <h4>Vanadyl Pyrophosphate</h4>
+              <p class="text-muted">Caltech</p>
+              <p class="text-muted">2016―2017</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -169,7 +189,8 @@
             </a>
             <div class="portfolio-caption">
               <h4>Datebase-Driven Software Analysis</h4>
-              <p class="text-muted">NASA Jet Propulsion Laboratory</p>
+              <p class="text-muted">NASA JPL</p>
+              <p class="text-muted">2015</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -179,11 +200,13 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="media/research/KLEE/thumbnail.jpg" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Symbolic Execution</h4>
-              <p class="text-muted">Wright Group, Portland State University</p>
+              <p class="text-muted">Portland State University</p>
+              <p class="text-muted">2014</p>
+
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -197,7 +220,8 @@
             </a>
             <div class="portfolio-caption">
               <h4>Tylenol + Chemo</h4>
-              <p class="text-muted">Muldoon Group, Oregon Health and Science University</p>
+              <p class="text-muted">Oregon Health and Science University</p>
+              <p class="text-muted">2013</p>
             </div>
           </div>
         </div>
@@ -511,7 +535,8 @@
                   <p class="abstract">
                     ABSTRACT. Gold nanoparticles (AuNPs) can selectively deliver the bulky, water insoluble photosensitizer drugs central to photodynamic therapy into cancer cells. By exploiting the reducing environment available at a plasma/liquid interface, we synthesized monodisperse 30 nm AuNPs suitable for this application. In preliminary experiments, we found that capping agents were necessary to achieve monodisperse size distributions. Afterwards, we evaluated glucose and citrate as potential capping agents. At excess concentrations, glucose was an effective capping agent, but glucose-capped AuNPs quickly aggregated and precipitated. Citrate was an effective capping agent at lower concentrations, but citrate-capped AuNPs also aggregated and precipitated. In addition, the citrate, rather than the plasma, largely drove reduction processes. Synthesizing AuNPs at a 2:1 ratio of citrate and glucose produced high- quality, 30 nm AuNPs that were remarkably stable at room temperature. Future work will involve screening additional capping agents. With a database linking capping agents to particle size, plasma/liquid interaction syntheses could be utilized to produce AuNPs with specific sizes that are suitable for a variety of drug delivery applications.</p>
                   <ul class="list-inline">
-                    <li>Dates: January - March 2018</li>
+                    <li>Caltech - Pasadena, CA</li>
+                    <li>January - March 2018</li>
                   </ul>
                   <a class="btn btn-primary btn-info" href="media/AuNP/O'Leary_AuNP_Report.pdf">
                     <i class="fa fa-file-pdf-o"></i>
@@ -548,9 +573,8 @@
                   ABSTRACT. Quantum Mechanics / Molecular Mechanics, or QM/MM, molecular dynamic simulations can help determine the complex and mysterious mechanisms of heterogeneous water-splitting catalysts. QM/MM is well suited for these systems since they are naturally split into a QM region (the catalyst) and an MM region (the solvent). However, conventional methods for describing the critical interactions between the QM and MM regions often fall short. In response, we propose and implement a new methodology: boundary region embedding QM/MM (BREQM). In BREQM, we introduce boundary regions through which the QM and MM regions can influence one another. Compared to conventional QM/MM, BREQM can more easily and consistently model water-splitting catalysts. We believe that mechanistic information gleaned from future BREQM simulations will lead to better water-splitting catalysts.  
                   </p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Explore</li>
-                    <li>Category: Graphic Design</li>
+                    <li>Goddard Group, Caltech - Pasadena, CA</li>
+                    <li>June - August 2017</li>
                   </ul>
                   <a class="btn btn-primary btn-info" href="media/research/BREQM/O'Leary_BREQM_Report.pdf">
                     <i class="fa fa-file-pdf-o"></i>
@@ -580,15 +604,14 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Vanadyl Pyrophosphate Dual-Phase Mechanism</h2>
+                  <h2 class="text-uppercase">Vanadyl Pyrophosphate</h2>
                   <p class="item-intro text-muted">Dual-Phase Mechanism for the Catalytic Conversion of n-Butane to Maleic Anhydride by the Vanadyl Pyrophosphate Heterogeneous Catalyst</p>
                   <img class="img-fluid d-block mx-auto" src="media/research/VPO/main.png" alt="">
                   <p class="abstract">
                   ABSTRACT. Industrial production of maleic anhydride (MA) from n-butane relies on the vanadyl pyrophosphate (VPO) catalyst. Improving VPO’s selectivity and activity could have enormous economic and environmental impact, but efforts have been impeded by uncertainties regarding the active phases and atomistic mechanism of the VPO catalyst. We report here a plausible 15-step mechanism taking n-butane to MA with energetics computed using hybrid density functional theory calculations on periodic models of the surface layers. We find that the P=O group on the X1 phase is solely responsible for butane activation. The P=O group is made active by the reduction of a nearby vanadium atom, a so-called reduction-coupled oxo-activation. However, we show that a catalyst consisting only of the X1 phase would not be selective because of several highly exothermic steps. Instead, we show that the more stable α1 phase can catalyze the formation of MA after initial activation, thus proposing and validating a dual-phase mechanism that takes butane to MA. Our new mechanism inspires the development of a more selective VPO catalyst containing small X1 regions highly separated by α1 surfaces.</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Finish</li>
-                    <li>Category: Identity</li>
+                    <li>Goddard Group, Caltech - Pasadena, CA</li>
+                    <li>June 2016 - September 2017</li>
                   </ul>
                   <a class="btn btn-primary btn-info" href="https://pubs.acs.org/doi/abs/10.1021/acs.jpcc.7b07881">
                     <i class="fa fa-newspaper-o"></i>
@@ -622,11 +645,10 @@
                   <p class="item-intro text-muted">C4: A Scaleable Software Analysis Platform</p>
                   <img class="img-fluid d-block mx-auto" src="media/research/C4/main.jpg" alt="">
                   <p class="abstract">
-                  ABSTRACT. We present C4, a novel software analysis platform that leverages recent advances in highly scalable search. C4 processes C codebases (using the state-of-the-art Clang compiler frontend), generating and indexing the resulting abstract syntax trees into a searchable Elasticsearch database. Users can then use C4’s software- analysis-specific search language to find bugs and extract other useful information from the codebase. Various analyses, both generic (such as building a call graph) and project-specific (such as checking if a particular set of API calls are made in the right order) can be implemented in a relatively few lines of code. A notable feature of using a searchable database is that results from various unrelated analyses can be stored back into the database and used to bootstrap more powerful and complex analyses. For example, a user might add a generated call graph to C4’s database and then search the call graph to check for the absence of recursive call cycles. In this respect, C4’s database serves as a constantly growing pool of information about the codebase. As a proof of concept, we used C4 to automatically build message graphs between various communicating processes in the existing codebase for the Mars Curiosity rover and the codebase in development for an upcoming mission to Jupiter’s moon Europa. Further topics of research involve expanding C4’s search language and using C4 to perform a wider variety of analyses on different codebases.</p>
+                  LaRS develops and applies novel tools in order to increase the reliability of critical mission software. As a LaRS student researcher, I designed and developed a completely new scalable and user-friendly software analysis platform called C4 for the purpose of automating steps of JPL’s manual code review process. I built C4 around Elasticsearch, a scalable search database, and implemented a query language in order to ask questions about code. For example, C4 could ask “which functions call function foo with what values” and “what functions use global variable bar”. Using my query language, I analyzed the core system software currently running on Mars Science Laboratory – Curiosity as well as the core software to be used on NASA’s upcoming mission to Europa. I presented C4 and my analyses to a group of engineers who wrote the aforementioned software and the members of LaRS; C4 was very well received.</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Lines</li>
-                    <li>Category: Branding</li>
+                    <li>Laboratory for Reliable Software, NASA JPL - La Cañada Flintridge, CA</li>
+                    <li>June - August 2015</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -659,9 +681,8 @@
                   <p class="abstract">
                   ABSTRACT. We entrust software to protect much of our sensitive information. Therefore, software security is absolutely essential. However, modern programs are often so large and complicated that they almost always have crash bugs, or defects that make execution stop unexpectedly. Crash bugs can be exploited by malicious third parties in order to access personal data and to destroy vital systems. Furthermore, crash bugs are frustrating to the user. A method to test software for crash bugs before release would be very beneficial. We researched symbolic execution, a cutting edge technique to weed out crash bugs in large programs. In symbolic execution, programs are run in a simulated environment with inputs that represent all possible inputs. We tested qmail, a popular mail transfer agent, with Cloud9, a symbolic execution tool. Our goal was to thoroughly test qmail and either find crash bugs in the program or prove that the program was crash bug-free. More broadly, we wanted to evaluate whether or not symbolic execution is ready for use in industry. In the end, we found no bugs in qmail. Unfortunately, we only managed to test 17.65% of the program. Given all of our effort still translated to low coverage, we concluded that symbolic execution is still in its infancy and is not yet ready for use in industry.</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Southwest</li>
-                    <li>Category: Website Design</li>
+                    <li>Wright Group, Portland State University - Portland, OR</li>
+                    <li>June - August 2013, 2014</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -693,9 +714,8 @@
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Window</li>
-                    <li>Category: Photography</li>
+                    <li>Muldoon Group, Oregon Health and Science University - Portland, OR</li>
+                    <li>June - August 2012</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
