--- a/index.html
+++ b/index.html
@@ -251,6 +251,11 @@
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
+                <li class="list-inline-item">
+                  <a href="https://github.com/wolearyc">
+                    <i class="fa fa-github"></i>
+                  </a>
+                </li>
               </ul>
             </div>
           </div>
