--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">About</h2>
-            <h6 class="text-muted">I left my hometown of Portland, OR to attend Caltech. I graduated in 2018 with a BS in chemical engineering and an interest in  materials. In Fall 2018, I am going to MIT as a first year MS/PhD student in the department of materials science and engineering.</h3>
+            <h6 class="text-muted text-left">I grew up in Portland, OR and moved to Los Angeles to attend Caltech. There, my interests shifted from computer science, to chemical engineering, and finally to materials science. In Fall 2018, I will begin as an MS/PhD student at MIT's department of materials science and engineering.</h3>
           </div>
         </div>
         <div class="row">
@@ -237,7 +237,7 @@
               <img class="mx-auto rounded-circle" src="media/O'Leary.jpg" alt="">
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#111;&#58;&#119;&#111;&#x6c;&#101;&#x61;&#x72;&#121;&#x63;&#x40;&#103;&#109;&#97;&#x69;&#108;&#46;&#99;&#x6f;&#x6d;">
+                  <a href="&#x6d;&#x61;&#x69;&#x6c;&#x74;&#111;&#58;&#x77;&#x6f;&#x6c;&#101;&#97;&#x72;&#121;&#99;&#64;&#109;&#105;&#116;&#46;&#x65;&#x64;&#117;">
                     <i class="fa fa-envelope-o"></i>
                   </a>
                 </li>
@@ -271,7 +271,7 @@
             <span class="copyright">Copyright &copy; Willis O'Leary 2018</span>
           </div>
           <div class="col-md-12">
-            <span class="copyright">Last updated March 24, 2018</span>
+            <span class="copyright">Last updated April 8, 2018</span>
           </div>
         </div>
       </div>
