--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Willis O'Leary</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Willis O'Leary
+        </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -55,8 +56,7 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in">Incoming PhD student @ MIT DMSE </div>
-          <div class="intro-heading text-uppercase"></div>
+          <div class="intro-lead-in">PhD student @ MIT<br><a href="https://ecm.mit.edu/">Electrochemical Materials Laboratory</a></div>
           <a class="btn btn-primary btn-xl text-uppercase btn-info" href="media/O'Leary_CV.pdf">CV</a>
         </div>
       </div>
@@ -78,7 +78,7 @@
               <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="interest-heading">Theory + Experiment</h4>
-            <p class="text-muted">By combining computation and experiment, we can deeply understand the physics responsible for desireable material properties. </p>
+            <p class="interest-text text-muted">By combining computation and experiment, we can deeply understand the physics responsible for desireable material properties. </p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -86,7 +86,7 @@
               <i class="fa fa-lightbulb-o fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="interest-heading">Rational Design</h4>
-            <p class="text-muted">With physical understanding, we can improve existing materials or invent radically new ones.
+            <p class="interest-text text-muted">With physical understanding, we can improve existing materials or invent radically new ones.
             </p>
           </div>
           <div class="col-md-4">
@@ -95,7 +95,7 @@
               <i class="fa fa-microchip fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="interest-heading">PoC Devices</h4>
-            <p class="text-muted">Using modern synthesis and processing techniques, we can translate designs into real materials and build proof-of-concept devices. </p>
+            <p class="interest-text text-muted">Using modern synthesis and processing techniques, we can translate designs into real materials and build proof-of-concept devices. </p>
           </div>
           <div class="col-md-6">
             <span class="fa-stack fa-4x">
@@ -103,7 +103,7 @@
               <i class="fa fa-refresh fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="interest-heading">Sustainable Tech</h4>
-            <p class="text-muted">Better materials are needed to improve sustainable energy technologies, such as photovoltaics and hydrogen fuel cells. </p>
+            <p class="interest-text text-muted">Better materials are needed to improve sustainable energy technologies, such as photovoltaics and hydrogen fuel cells. </p>
           </div>
           <div class="col-md-6">
             <span class="fa-stack fa-4x">
@@ -111,7 +111,7 @@
               <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="interest-heading">Beyond Critical Materials</h4>
-            <p class="text-muted">We should work towards developing materials whose synthetic ingredients can be ethically and sustainably sourced.</p>
+            <p class="interest-text text-muted">We should work towards developing materials whose synthetic ingredients can be ethically and sustainably sourced.</p>
           </div>
         </div>
       </div>
@@ -126,6 +126,7 @@
             <h3 class="section-subheading text-muted"></h3>
           </div>
         </div>
+
         <div class="row">
           <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
@@ -142,6 +143,7 @@
               <p class="text-muted">2018</p>
             </div>
           </div>
+
           <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
               <div class="portfolio-hover">
@@ -157,6 +159,7 @@
               <p class="text-muted">2017</p>
             </div>
           </div>
+
           <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
               <div class="portfolio-hover">
@@ -172,6 +175,7 @@
               <p class="text-muted">2016―2017</p>
             </div>
           </div>
+
           <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
               <div class="portfolio-hover">
@@ -187,6 +191,7 @@
               <p class="text-muted">2015</p>
             </div>
           </div>
+
           <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
               <div class="portfolio-hover">
@@ -228,7 +233,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">About</h2>
-            <h6 class="text-muted text-left">I grew up in Portland, OR and moved to Los Angeles to attend Caltech. There, my interests shifted from computer science, to chemical engineering, and finally to materials science. In Fall 2018, I will begin as an MS/PhD student at MIT's department of materials science and engineering.</h3>
+            <h6 class="text-muted text-left">I grew up in Portland, OR and moved to Los Angeles to attend Caltech. There, my interests shifted from computer science, to chemical engineering, and finally to materials science. Today, I'm a first year PhD student at MIT's department of materials science and engineering. I work in the <a href="https://ecm.mit.edu/">Electrochemical Materials Laboratory</a>, led by <a href="https://dmse.mit.edu/faculty/profile/jrupp">Prof. Jennifer Rupp</a>. </h3>
           </div>
         </div>
         <div class="row">
@@ -268,10 +273,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <span class="copyright">Copyright &copy; Willis O'Leary 2018</span>
           </div>
           <div class="col-md-12">
-            <span class="copyright">Last updated April 8, 2018</span>
+            <span class="copyright">Last updated November 11, 2018</span>
           </div>
         </div>
       </div>
@@ -283,11 +287,6 @@
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
           <div class="container">
             <div class="row">
               <div class="col-lg-8 mx-auto">
@@ -320,11 +319,6 @@
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
           <div class="container">
             <div class="row">
               <div class="col-lg-8 mx-auto">
@@ -358,11 +352,6 @@
     <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
           <div class="container">
             <div class="row">
               <div class="col-lg-8 mx-auto">
@@ -395,11 +384,6 @@
     <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
           <div class="container">
             <div class="row">
               <div class="col-lg-8 mx-auto">
@@ -429,11 +413,6 @@
     <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
           <div class="container">
             <div class="row">
               <div class="col-lg-8 mx-auto">
@@ -465,11 +444,6 @@
     <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
           <div class="container">
             <div class="row">
               <div class="col-lg-8 mx-auto">
